# PlatformerSFML

./: CMakeLists.txt
src/: Coin.cpp  Coin.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Lives.cpp  Lives.h  LoseScreen.cpp  LoseScreen.h  Menu.cpp  Menu.h  Platform.cpp  Platform.h  Score.cpp  Score.h  Vector2.h  WinScreen.cpp  WinScreen.h  main.cpp
